--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,29 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  do-test:
+    name: Test on Python
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10"]
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install test dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install flit codecov pytest flake8
+      - name: Install package dependencies
+        run: flit install --deps develop
+      - name: Overrule shapely version from matrix
+        run: python -m pip install "shapely==${{ matrix.shapely-version }}"
+      - name: Lint with flake8
+        run: flake8 topojson
+        continue-on-error: true
+      - name: Test with pytest
+        run: pytest tests
