--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,6 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flit codecov pytest flake8
+          python -m pip install pytest numpy pandas
       - name: Test with pytest
         run: pytest tests
