--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,5 +40,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pytest numpy pandas
+          
+      - name: Run preprocessing
+        run: python Config/ModuleDataSetFiles/import_prepro_script.py  
       - name: Test with pytest
         run: pytest tests
+        
+        
