--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest numpy pandas
+          python -m pip install pytest numpy pandas chardet
           
       - name: Run preprocessing
         run: python Config/ModuleDataSetFiles/import_prepro_script.py tests/testfiles/FC_test.csv
