--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
           
       - name: Run preprocessing
         run: python Config/ModuleDataSetFiles/import_prepro_script.py tests/testfiles/FC_test.csv
-      - name: Test with pytest
+      - name: Test preprocessing
         run: pytest tests
         
         
