--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,15 +29,16 @@ jobs:
   do-test:
     name: Test preproccesing scripts
     runs-on: windows-2019
-    strategy:
-      matrix:
-        python-version: ["3.8"]
-      fail-fast: false
+    # strategy:
+    #   matrix:
+    #     python-version: ["3.8"]
+    #   fail-fast: false
     steps:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         activate-environment: anaconda-client-env
         environment-file: conda/actions_env.yml
+        python-version: 3.8
         auto-activate-base: false
     - run: |
           conda info
