--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         activate-environment: anaconda-client-env
-        environment-file: conda/actions_env.yml
+        environment-file: etc/actions_env.yml
         python-version: 3.8
         auto-activate-base: false
     - run: |
