--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        C:\Miniconda\condabin\conda.bat env create -f etc/actions_env.yml
+        C:\Miniconda\condabin\conda.bat env create --file etc/actions_env.yml
         C:\Miniconda\condabin\conda.bat init powershell
     - run: |
           C:\Miniconda\condabin\conda.bat activate TEST_ACTIONS
