--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,20 +31,20 @@ jobs:
     runs-on: windows-2019
     steps:
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.8
-    - uses: actions/checkout@v3
+    - name: checkout repository 
+      uses: actions/checkout@v3
     - name: Install dependencies
       run: |
+        C:\Miniconda\condabin\conda.bat env update -n base -c defaults conda
         C:\Miniconda\condabin\conda.bat env create --file etc/actions_env.yml
         C:\Miniconda\condabin\conda.bat init powershell
     - run: |
           C:\Miniconda\condabin\conda.bat activate TEST_ACTIONS
           conda info
           conda list
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
       # with:
       #   python-version: ${{ matrix.python-version }}
     # - name: Install test dependencies
