--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,8 +39,7 @@ jobs:
     - name: Install dependencies
       run: |
         C:\Miniconda\condabin\conda.bat env update -n base -c defaults conda
-        C:\Miniconda\condabin\conda.bat env create --file etc/actions_env.yml
-        C:\Miniconda\condabin\conda.bat init powershell
+        C:\Miniconda\condabin\conda.bat env update --file etc/actions_env.yml --name base
     - run: |
           C:\Miniconda\condabin\conda.bat activate TEST_ACTIONS
           conda info
@@ -54,7 +53,7 @@ jobs:
         
     - name: Run preprocessing BIO
       run: |
-          C:\Miniconda\condabin\conda.bat activate TEST_ACTIONS
+          C:\Miniconda\condabin\conda.bat activate base
           python Config/ModuleDataSetFiles/PreProImport_BIO.py tests/testfiles/Diatomeeen_test.csv
     - name: Run preprocessing FC
       run: python Config/ModuleDataSetFiles/PreProImport_FC.py tests/testfiles/FC_test.csv
