--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
         python-version: 3.8
     - name: checkout repository 
       uses: actions/checkout@v3
-    - name: Install dependencies
+#    - name: Install dependencies
 
       # with:
       #   python-version: ${{ matrix.python-version }}
