--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
       uses: goanpeca/setup-miniconda@v1
       with:
         activate-environment: base
-        environment-file: actions_env.yml
+        environment-file: etc/actions_env.yml
         python-version: 3.8
         auto-activate-base: false
 #    - name: Install dependencies
