--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,30 +31,17 @@ jobs:
     runs-on: windows-2019
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Conda dependencies
+    - name: Setup environment
       uses: goanpeca/setup-miniconda@v1
       with:
         activate-environment: base
         environment-file: etc/actions_env.yml
         python-version: 3.8
         auto-activate-base: false
-#    - name: Install dependencies
-
-      # with:
-      #   python-version: ${{ matrix.python-version }}
-    # - name: Install test dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     python -m pip install pytest
-        
+    - name: activate environment
+      run: C:\Miniconda\condabin\conda.bat activate base
     - name: Run preprocessing BIO
-      run: |
-          C:\Miniconda\condabin\conda.bat env update -n base -c defaults conda
-          C:\Miniconda\condabin\conda.bat env update --file etc/actions_env.yml --name base
-          C:\Miniconda\condabin\conda.bat activate base
-          C:\Miniconda\condabin\conda.bat info
-          C:\Miniconda\condabin\conda.bat list
-          python Config/ModuleDataSetFiles/PreProImport_BIO.py tests/testfiles/Diatomeeen_test.csv
+      run: python Config/ModuleDataSetFiles/PreProImport_BIO.py tests/testfiles/Diatomeeen_test.csv
     - name: Run preprocessing FC
       run: python Config/ModuleDataSetFiles/PreProImport_FC.py tests/testfiles/FC_test.csv
 
