--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,10 +34,11 @@ jobs:
     - name: Setup environment
       uses: goanpeca/setup-miniconda@v1
       with:
-        activate-environment: base
         environment-file: etc/actions_env.yml
+        activate-environment: base
         python-version: 3.8
-        auto-activate-base: true
+        auto-activate-base: false
+    - run: conda info
     #- name: activate environment
     #  run: C:\Miniconda\condabin\conda.bat activate base
     - name: Run preprocessing BIO
