--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,15 +31,17 @@ jobs:
     runs-on: windows-2019
     steps:
     - uses: actions/checkout@v2
-    - name: Update Conda
-      run: C:\Miniconda\condabin\conda.bat update -n base conda
-    - name: Setup environment
-      uses: goanpeca/setup-miniconda@v1
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v3
       with:
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-        environment-file: etc/actions_env.yml
-        python-version: 3.8
-        auto-activate-base: true
+        python-version: 3.9
+    - name: Add conda to system path
+      run: |
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
+    - name: Install dependencies
+      run: |
+        conda env update --file etc/actions_env.yml --name base
     - run: conda info
     #- name: activate environment
     #  run: C:\Miniconda\condabin\conda.bat activate base
