--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,11 +38,13 @@ jobs:
     - name: Install dependencies
       run: |
         C:\Miniconda\condabin\conda.bat env update --file etc/actions_env.yml --name base
-    - run: C:\Miniconda\condabin\conda.bat info
+    - run: C:\Miniconda\condabin\conda.bat list
     #- name: activate environment
     #  run: C:\Miniconda\condabin\conda.bat activate base
     - name: Run preprocessing BIO
-      run: python Config/ModuleDataSetFiles/PreProImport_BIO.py tests/testfiles/Diatomeeen_test.csv
+      run:  |
+        C:\Miniconda\condabin\conda.bat activate base
+        python Config/ModuleDataSetFiles/PreProImport_BIO.py tests/testfiles/Diatomeeen_test.csv
     - name: Run preprocessing FC
       run: python Config/ModuleDataSetFiles/PreProImport_FC.py tests/testfiles/FC_test.csv
 
