--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,14 +39,14 @@ jobs:
       run: |
         C:\Miniconda\condabin\conda.bat env update --file etc/actions_env.yml --name base
     - run: C:\Miniconda\condabin\conda.bat list
+    - run: C:\Miniconda\condabin\conda.bat info --envs
     #- name: activate environment
     #  run: C:\Miniconda\condabin\conda.bat activate base
     - name: Run preprocessing BIO
       run:  |
-        C:\Miniconda\condabin\conda.bat activate base
-        python Config/ModuleDataSetFiles/PreProImport_BIO.py tests/testfiles/Diatomeeen_test.csv
+        C:\Miniconda\condabin\conda.bat activate base & python Config\ModuleDataSetFiles\PreProImport_BIO.py tests\testfiles\Diatomeeen_test.csv
     - name: Run preprocessing FC
-      run: python Config/ModuleDataSetFiles/PreProImport_FC.py tests/testfiles/FC_test.csv
+      run: python Config\ModuleDataSetFiles\PreProImport_FC.py tests\testfiles\FC_test.csv
 
     - name: Test preprocessing BIO + FC
       run: pytest tests
