--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,20 +31,22 @@ jobs:
     runs-on: windows-2019
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: 3.9
+        python-version: 3.10
     - name: Install dependencies
       run: |
-        C:\Miniconda\condabin\conda.bat env update --file etc/actions_env.yml --name base
+        C:\Miniconda\condabin\conda.bat env update --file etc/actions_env.yml
     - run: C:\Miniconda\condabin\conda.bat list
     - run: C:\Miniconda\condabin\conda.bat info --envs
     #- name: activate environment
     #  run: C:\Miniconda\condabin\conda.bat activate base
     - name: Run preprocessing BIO
       run:  |
-        C:\Miniconda\condabin\conda.bat activate base & python Config\ModuleDataSetFiles\PreProImport_BIO.py tests\testfiles\Diatomeeen_test.csv
+        echo "begin: PATH=$PATH;"
+        echo where python    
+        C:\Miniconda\condabin\conda.bat activate actions_env & python Config\ModuleDataSetFiles\PreProImport_BIO.py tests\testfiles\Diatomeeen_test.csv
     - name: Run preprocessing FC
       run: python Config\ModuleDataSetFiles\PreProImport_FC.py tests\testfiles\FC_test.csv
 
