--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,47 +10,38 @@ on:
       - productie
       - test
       - ontwikkel
+       
+ 
 jobs:
-  # do-explore:
-  #   name: Feedback runner
-  #   runs-on: windows-2019
-  #   steps:
-  #     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-  #     - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-  #     - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-  #     - name: Check out repository code
-  #       uses: actions/checkout@v3
-  #     - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-  #     - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-  #     - name: List files in the repository  
-  #       run: |
-  #         ls ${{ github.workspace }}
-  #     - run: echo "🍏 This job's status is ${{ job.status }}."
-  do-test:
-    name: Test preproccesing scripts
-    runs-on: windows-2019
+  create-env:
+    name: ${{ matrix.os }} 
+    runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash -l {0}
+        
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+        
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        C:\Miniconda\condabin\conda.bat env update --file etc/actions_env.yml
-    - run: C:\Miniconda\condabin\conda.bat list
-    - run: C:\Miniconda\condabin\conda.bat info --envs
-    #- name: activate environment
-    #  run: C:\Miniconda\condabin\conda.bat activate base
-    - name: Run preprocessing BIO
-      run:  |
-        echo "begin: PATH=$PATH;"
-        echo where python    
-        C:\Miniconda\condabin\conda.bat activate actions_env & python Config\ModuleDataSetFiles\PreProImport_BIO.py tests\testfiles\Diatomeeen_test.csv
-    - name: Run preprocessing FC
-      run: python Config\ModuleDataSetFiles\PreProImport_FC.py tests\testfiles\FC_test.csv
-
-    - name: Test preprocessing BIO + FC
-      run: pytest tests
+      - name: checkout repository
+        uses: actions/checkout@v2
         
-        
+      - name: create environment with mamba
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          mamba-version: "*"
+          channels: conda-forge,bioconda,defaults
+          auto-activate-base: false
+          activate-environment: actions_env
+          environment-file: envs/actions_env.yaml
+      
+      - name: check solution
+        run: |
+          mamba env export
+      
+      - name: test
+        run: |
+          python Config\ModuleDataSetFiles\PreProImport_FC.py tests\testfiles\FC_test.csv
