--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
           channels: conda-forge,bioconda,defaults
           auto-activate-base: false
           activate-environment: actions_env
-          environment-file: envs/actions_env.yml
+          environment-file: etc/actions_env.yml
       
       - name: check solution
         run: |
