--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8"]
+        python-version: ["3.10"]
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -42,7 +42,7 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest numpy pandas chardet
+          python -m pip install pytest numpy=1.23.4 pandas chardet
           
       - name: Run preprocessing
         run: python Config/ModuleDataSetFiles/import_prepro_script.py tests/testfiles/FC_test.csv
