--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,11 +40,11 @@ jobs:
           
       - name: Run preprocessing BIO
         run: |
-          python Config\ModuleDataSetFiles\PreProImport_BIO.py tests\testfiles\Diatomeeen_test.csv
+          python Config/ModuleDataSetFiles/PreProImport_BIO.py tests/testfiles/Diatomeeen_test.csv
       - name: Run preprocessing FC
         run: |
           python Config/ModuleDataSetFiles/PreProImport_FC.py tests/testfiles/FC_test.csv
       - name: Install test dependencies
-        run: C:\Miniconda\condabin\conda.bat install pytest      
+        run: C:/Miniconda/condabin/conda.bat install pytest      
       - name: Test preprocessing
         run: pytest tests
