--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
           auto-activate-base: false
           activate-environment: actions_env
           environment-file: etc/actions_env.yml
-          
+        run: C:/Miniconda/condabin/conda.bat list
       - name: Run preprocessing BIO
         run: |
           python Config/ModuleDataSetFiles/PreProImport_BIO.py tests/testfiles/Diatomeeen_test.csv
