--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,9 @@ on:
   push:
     paths:
       - Config/ModuleDataSetFiles/PreProImport_BIO.py
+      - Config/ModuleDataSetFiles/PreProImport_FC.py
       - .github/workflows/test.yml
-    branches:
+      branches:
       - productie
       - test
       - ontwikkel
@@ -21,7 +22,10 @@ jobs:
     runs-on: windows-2019
     defaults:
       run:
-        shell: bash -l {0}        
+        shell: bash -l {0}
+    strategy:
+      fail-fast: false
+        
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
