--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,14 @@ on:
       - Config/ModuleDataSetFiles/PreProImport_BIO.py
       - Config/ModuleDataSetFiles/PreProImport_FC.py
       - .github/workflows/test.yml
-      branches:
+    branches:
       - productie
       - test
       - ontwikkel
   pull_request:
+      - Config/ModuleDataSetFiles/PreProImport_BIO.py
+      - Config/ModuleDataSetFiles/PreProImport_FC.py
+      - .github/workflows/test.yml
     branches:
       - productie
       - test
