--- a/.github/workflows/test_wftestrun.yml
+++ b/.github/workflows/test_wftestrun.yml
@@ -29,7 +29,19 @@ jobs:
         run: ls
       - name: run workflow testrun
         run: wf_testrun/run_wf_testrun.bat
-      - name: list directory
-        run: ls
           
-          
+      - name: create environment with mamba
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          mamba-version: "*"
+          python-version: "3.10"
+          channels: conda-forge,defaults
+          auto-activate-base: true
+      - name: list environment
+        run: |
+          C:/Miniconda/condabin/conda.bat info --envs
+          C:/Miniconda/condabin/conda.bat list
+      - name: Install test dependencies
+        run: C:/Miniconda/condabin/conda.bat install pytest      
+      - name: Test config
+        run: pytest tests/test_config.py
